--- a/app/src/main/res/layout/activity_cook_tip_write.xml
+++ b/app/src/main/res/layout/activity_cook_tip_write.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <!-- 상단 툴바 -->
+    <!-- 상단 고정 툴바 -->
     <LinearLayout
         android:id="@+id/top_bar_container"
         android:layout_width="match_parent"
@@ -21,14 +21,19 @@
             android:background="#FAFAFA"
             android:paddingHorizontal="16dp">
 
-            <ImageView
-                android:id="@+id/iv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageButton
+                android:id="@+id/back_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="뒤로가기"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
                 android:src="@drawable/ic_arrow_back"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:tint="@color/text_primary" />
 
             <TextView
                 android:id="@+id/tv_toolbar_title"
