--- a/app/src/main/res/layout/activity_recipe_read.xml
+++ b/app/src/main/res/layout/activity_recipe_read.xml
@@ -35,18 +35,20 @@
             android:paddingStart="8dp"
             android:paddingEnd="16dp">
 
-            <ImageView
-                android:id="@+id/btn_close"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
+            <ImageButton
+                android:id="@+id/iv_back_button"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="뒤로가기"
                 android:padding="8dp"
-                android:src="@drawable/ic_circle_close"
+                android:scaleX="0.8"
+                android:scaleY="0.8"
+                android:src="@drawable/ic_arrow_back"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside" />
+                app:tint="@color/text_primary" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/sound_button"
@@ -59,7 +61,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/btn_close"
+                app:layout_constraintStart_toEndOf="@+id/iv_back_button"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <LinearLayout
