상단바 통일

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -8,7 +8,7 @@
 
     <!-- 툴바 -->
     <include
-        android:id="@+id/top_bar_layout"
+        android:id="@+id/toolbar"
         layout="@layout/toolbar_basic" />
 
     <ScrollView
