--- a/app/src/main/res/layout/content_recipe_summary.xml
+++ b/app/src/main/res/layout/content_recipe_summary.xml
@@ -128,7 +128,10 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="8dp" />
         </androidx.cardview.widget.CardView>
-
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"/>
     </LinearLayout>
 
    <!-- <Button
