--- a/app/src/main/res/layout/toolbar_basic.xml
+++ b/app/src/main/res/layout/toolbar_basic.xml
@@ -62,55 +62,59 @@
         <Space
             android:layout_width="40dp"
             android:layout_height="40dp" />
+        <LinearLayout
+            android:id="@+id/edit_delete_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/edit_button_card"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:outlineAmbientShadowColor="@color/transparent"
-            android:outlineSpotShadowColor="@color/transparent"
-            android:visibility="gone"
-            app:cardBackgroundColor="@color/transparent"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="6dp"
-            tools:targetApi="28"
-            tools:visibility="gone">
-
-            <!-- 수정 버튼 -->
-            <ImageButton
-                android:id="@+id/edit_button"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/edit_button_card"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="수정"
-                android:src="@drawable/ic_pen"
-                app:tint="@color/text_primary" />
-        </androidx.cardview.widget.CardView>
+                android:outlineAmbientShadowColor="@color/transparent"
+                android:outlineSpotShadowColor="@color/transparent"
+                app:cardBackgroundColor="@color/transparent"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="6dp"
+                tools:targetApi="28"
+                tools:visibility="gone">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/delete_button_card"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:outlineAmbientShadowColor="@color/transparent"
-            android:outlineSpotShadowColor="@color/transparent"
-            android:visibility="gone"
-            app:cardBackgroundColor="@color/transparent"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="6dp"
-            tools:targetApi="28"
-            tools:visibility="gone">
+                <!-- 수정 버튼 -->
+                <ImageButton
+                    android:id="@+id/edit_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="수정"
+                    android:src="@drawable/ic_pen"
+                    app:tint="@color/text_primary" />
+            </androidx.cardview.widget.CardView>
 
-            <!-- 삭제 버튼 -->
-            <ImageButton
-                android:id="@+id/delete_button"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/delete_button_card"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:alpha="0.7"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:contentDescription="삭제"
-                android:src="@drawable/ic_trash"
-                app:tint="@color/error" />
-        </androidx.cardview.widget.CardView>
+                android:outlineAmbientShadowColor="@color/transparent"
+                android:outlineSpotShadowColor="@color/transparent"
+                app:cardBackgroundColor="@color/transparent"
+                app:cardCornerRadius="20dp"
+                app:cardElevation="6dp"
+                tools:targetApi="28"
+                tools:visibility="gone">
+
+                <!-- 삭제 버튼 -->
+                <ImageButton
+                    android:id="@+id/delete_button"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:alpha="0.7"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="삭제"
+                    android:src="@drawable/ic_trash"
+                    app:tint="@color/error" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.appcompat.widget.Toolbar>
