--- a/app/src/main/res/layout/cook_write_01.xml
+++ b/app/src/main/res/layout/cook_write_01.xml
@@ -72,9 +72,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/testimg1"
-                        android:visibility="gone"
-                        tools:visibility="gone" />
+                        android:visibility="visible" />
                 </FrameLayout>
             </androidx.cardview.widget.CardView>
 
