--- a/app/src/main/res/drawable/bg_search_bar_orange_border.xml
+++ b/app/src/main/res/drawable/bg_search_bar_orange_border.xml
@@ -1,6 +1,11 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/white"/> <!-- 내부 배경색 -->
-    <corners android:radius="10dp"/> <!-- 모서리 둥글기, 40dp 높이의 절반 -->
-    <stroke android:width="1.5dp" android:color="#FF9800"/> <!-- 주황색 테두리 (색상 코드 및 두께 조절) -->
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- 하단 밑줄 레이어 -->
+    <item android:gravity="bottom">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/primary" /> <!-- 주황색 밑줄 -->
+            <size android:height="1dp" /> <!-- 밑줄 두께 -->
+        </shape>
+    </item>
+
+</layer-list>
