--- a/app/src/main/res/layout/activity_recipe_read_recent.xml
+++ b/app/src/main/res/layout/activity_recipe_read_recent.xml
@@ -8,6 +8,7 @@
     android:background="@color/white"
     tools:context=".ui.recipe.read.RecipeReadActivity">
 
+    <!-- 툴바 -->
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar_basic" />
@@ -17,6 +18,8 @@
         android:id="@+id/view_pager_recipe_steps"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/bottom_navigation"
+        android:layout_below="@id/toolbar"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:overScrollMode="never" />
@@ -187,6 +190,7 @@
                             android:orientation="horizontal">
 
                             <ImageView
+                                android:id="@+id/btn_next_step_icon"
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
                                 android:layout_marginEnd="6dp"
@@ -194,6 +198,7 @@
                                 app:tint="@color/white" />
 
                             <TextView
+                                android:id="@+id/btn_next_step_text"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/notosans_bold"
@@ -205,8 +210,5 @@
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
-
-
     </LinearLayout>
-
 </RelativeLayout>
