--- a/app/src/main/res/layout/view_circular_timer.xml
+++ b/app/src/main/res/layout/view_circular_timer.xml
@@ -50,24 +50,14 @@
         app:layout_constraintTop_toBottomOf="@id/guideline_center">
 
         <ImageButton
-            android:id="@+id/btn_pause"
-            android:layout_width="50dp"
-            android:layout_height="56dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="재생"
-            android:scaleType="centerInside"
-            android:src="@drawable/ic_pause"
-            app:tint="@android:color/black"/>
-
-        <ImageButton
-            android:id="@+id/btn_play"
+            android:id="@+id/btn_play_pause"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="일시정지"
+            android:contentDescription="재생/일시정지"
             android:scaleType="centerInside"
             android:src="@drawable/ic_play"
-            app:tint="@android:color/black"/>
+            app:tint="@android:color/black" />
 
         <ImageButton
             android:id="@+id/btn_reset"
