카테고리 아이콘, 전체 카테고리, 요리팁 보기, 유저피드 외 비율조정

--- a/app/src/main/res/layout/activity_bookmark.xml
+++ b/app/src/main/res/layout/activity_bookmark.xml
@@ -33,6 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
+            android:fontFamily="@font/notosans_regular"
+            android:includeFontPadding="false"
             android:text="북마크가 비어있어요."
             android:textColor="@color/text_secondary"
             android:textSize="12sp"
