--- a/app/src/main/res/layout/activity_recent.xml
+++ b/app/src/main/res/layout/activity_recent.xml
@@ -35,17 +35,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="검색 결과가 없습니다."
-            android:textSize="16sp"
-            android:textColor="@android:color/darker_gray"
+            android:text="검색 결과가 없어요."
+            android:textSize="12sp"
+            android:textColor="@color/text_secondary"
             android:gravity="center"
             android:visibility="gone"
             tools:visibility="visible" />
 
         <ProgressBar
             android:id="@+id/progress_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:layout_gravity="center"
             android:visibility="gone"
             tools:visibility="visible" />
